@@ -17,6 +17,7 @@ Adrian Bunk                         bunk@stusta.de
 AIDA Shinra                         shinra@j10n.org
 Akim Demaille                       demaille@inf.enst.fr
 Alain Magloire                      alain@qnx.com
+Alan Curry                          pacman@kosh.dhis.org
 Alan Iwi                            iwi@atm.ox.ac.uk
 Albert Chin-A-Young                 china@thewrittenword.com
 Albert Hopkins                      ahopkins@dynacare.com
